--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "1029prod",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,18 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "^path-to-regexp@":"8.3.0",
-    "iconv-lite@":"0.7.0",
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  },
-  "Json.schemas":[
-    {
-      "filematch":["/package.json"],
-      "url": "./.vscode/package.schema.json"
-    }
-  ]
-
+  }
 }
